Finishing model prediction tests

--- a/model.ipynb
+++ b/model.ipynb
@@ -49,7 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df = pd.read_csv('archive/train.txt', names=['text', 'emotion'], sep=';')\n",
+    "val_df = pd.read_csv('archive/val.txt', names=['text', 'emotion'], sep=';')\n",
+    "test_df = pd.read_csv('archive/test.txt', names=['text', 'emotion'], sep=';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
